# gweatherrouting

./: .buildinfo  .gitignore  .pylintrc  .travis.yml  CNAME  CONTRIBUTING.md  LICENSE  Makefile  ModuloBarca01.py  ModuloCartografia.py  README.md  README.mobile.md  buildozer.spec  catnmea.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.kivy.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.gtk.py  setup.kivy.py  setup.py  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/docs/: index.doctree  quickstart.doctree
.github/workflows/: .appimage.yaml.kate-swp  appimage.yaml  ci.yaml  ci_new.yaml  docs.yaml  flatpak.yml  temp.yaml  test.yaml  windows.yaml
.github/workflows/script/: flatpak_dep.sh  goodbye.sh  python_dep.sh  ubuntu_dep.sh  ubuntu_dep_eccodes_bin.sh
.well-known/: org.flathub.VerifiedApps.txt
GRIBB/: 20130214_132805_.grb
POL/: PolareMiniProto.pol
_sources/: index.md.txt
_sources/docs/: quickstart.md.txt
_static/: custom.css
android_recipes/eccodes/: __init__.py
android_recipes/eccodes/patches/: log2.patch
appimage/: AppRun  GWeatherRouting.desktop  README.appimage.md  appimagegen.sh  gWeatherRouting.desktop  pyinstaller_gi_hook.py
docs/: index.html  quickstart.html
docs/source/: .gitignore  conf.py  index.md
docs/source/docs/: index.rst  installation.md  quickstart.md  routing.md
flatpak/: bin-requirements.txt  bin-requirements.yaml  flatpak-gen.sh  io.github.dakk.gweatherrouting.yml  org.gweatherrouting.app.yml  org.gweatherrouting.gweatherrouting.metainfo.xml  org.gweatherrouting.gweatherrouting.yml  python3-requirements.json  python3-requirements.yaml  requirements.txt
gweatherrouting/: __init__.py  __main__.py  config.py  log.py  main.py  session.py  storage.py
gweatherrouting-beeware/: LICENSE  README.rst  pyproject.toml
gweatherrouting-beeware/src/gweatherrouting_beeware/: __main__.py  app.py
gweatherrouting-beeware/src/gweatherrouting_beeware.dist-info/: METADATA
gweatherrouting/common/: __init__.py
gweatherrouting/conn/: __init__.py  connmanager.py  datasource.py  networkdatasource.py  serialdatasource.py
gweatherrouting/core/: __init__.py  aismanager.py  boat.py  connectionmanager.py  core.py  datasource.py  dummy_storage.py  grib.py  gribmanager.py  modifiedgrib.py  networkdatasource.py  poimanager.py  polar.py  polarmanager.py  polarwrapper.py  routing.py  serialdatasource.py  storage.py  timecontrol.py  track.py  trackmanager.py  utils.py
gweatherrouting/core/geo/: __init__.py  collection.py  element.py  elementmultipoint.py  elementpoint.py  poi.py  poicollection.py  routing.py  routingcollection.py  track.py  trackcollection.py
gweatherrouting/core/gribsources/: __init__.py  base.py  noaagfs.py  openskiron.py
gweatherrouting/core/routers/: __init__.py  linearbestisorouter.py  router.py
gweatherrouting/core/utils/: __init__.py  dummy_storage.py  storage.py
gweatherrouting/data/: COPYRIGHT  countries_en.txt  extract_icons.py  style.css
gweatherrouting/data/boats/: list.json
gweatherrouting/data/polars/: bavaria38.pol  class40.pol  first317.pol  mini650_proto.pol  test.pol
gweatherrouting/data/regattas/: transat1.gpx
gweatherrouting/gtk/: __init__.py  chartstack.glade  chartstack.py  chartstack_ais.py  chartstack_base.py  chartstack_poi.py  chartstack_routing.py  chartstack_track.py  gribmanagerwindow.glade  gribmanagerwindow.py  logsstack.glade  logsstack.py  mainwindow.glade  mainwindow.py  orcmanagerwindow.glade  orcmanagerwindow.py  polarmanagerwindow.glade  polarmanagerwindow.py  polarstack.glade  polarstack.py  projectpropertieswindow.glade  projectpropertieswindow.py  regattastack.glade  regattastack.py  routingwizarddialog.glade  routingwizarddialog.py  style.py  timepickerdialog.py
gweatherrouting/gtk/charts/: __init__.py  chartlayer.py  chartmanager.py  cm93datasource.py  cm93driver.py  cm93parser.py  gdalrasterchart.py  gdalvectorchart.py  gshhs.py
gweatherrouting/gtk/gauges/: __init__.py  gauge.py  gaugemanager.py  numericgauge.py  speedgauge.py
gweatherrouting/gtk/maplayers/: __init__.py  aismaplayer.py  geomaplayer.py  gribmaplayer.py  isochronesmaplayer.py  poimaplayer.py  toolsmaplayer.py  trackmaplayer.py
gweatherrouting/kivy/: __init__.py  app.kv  app.py  gribscreen.py  regattascreen.kv  regattascreen.py  settingsscreen.kv  settingsscreen.py  timepickerdialog.py  trackscreen.py
gweatherrouting/ui/: aboutdialog.py  progressdialog.py
gweatherroutingkivy/: main.py
old/: ModuloGrib01.py  ModuloNav.py  SimulazioneRegata300.py
old/GRIBB/: 20130311_120424_.grb
old/GSHH/: gshhs_l.b
old/POL/: Polare40.pol  PolareClass40.pol
old/oldmapwidget/: boat.py  boatselectdialog.py  boatwidget.py  grib.py  mapwidget.py
old_core/: __init__.py  beizer.py  polar.py  routing.py  track.py  utils.py
old_core/routers/: __init__.py  linearbestisorouter.py
regattasim/: config.py  main.py
regattasim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
regattasim/core/: __init__.py  beizer.py  boat.py  core.py  grib.py  isotree.py  polar.py  routing.py  simulation.py  track.py  utils.py
regattasim/data/: countries.geojson
regattasim/ui/: __init__.py  aboutdialog.py  boatselectdialog.py  boatwidget.py  gribmaplayer.py  gribselectdialog.py  isochronesmaplayer.py  mainwindow.py  mapwidget.py  polarwidget.py  progressdialog.py  routingwizarddialog.py
test/: __init__.py  main.py  test_aismanager.py  test_boatinfo.py  test_collection.py  test_common.py  test_connectionmanager.py  test_datasource.py  test_geo_element.py  test_geo_poi.py  test_geo_track.py  test_gribsources.py  test_modifiedgrib.py  test_placeholder.py  test_poicollection.py  test_polarwrapper.py  test_storage.py  test_timecontrol.py  test_trackcollection.py  test_utils.py
tools/: catnmea.py  gweatherrouting.desktop  io.github.dakk.gweatherrouting.desktop  locode.py  org.gweatherrouting.app.desktop  org.gweatherrouting.gweatherrouting.desktop
tools/samples/: ais_23_03_2026.nmea
windows/: build.ps1  installer.iss  pyinstaller_gi_hook_win.py
(+138 files in other folders)
